# Zcash-Pulseboard

./: .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  DEPLOY_RENDER.md  PLATFORM_COMPARISON.md  README.md  package-lock.json  railway.json  render.yaml  requirements.txt  vercel.json
backend/: .env  .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/db/: client.py
backend/app/jobs/: scheduler.py  tasks.py
backend/app/models/: metrics.py
backend/app/services/: insights_service.py  metrics_service.py  notification_service.py
backend/app/zcash_pulse_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/data/: zcash_pulse.duckdb
backend/tests/: test_metrics_service.py
backend/zcash_pulse_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: zcash_pulse.duckdb
data/etl/: pipeline.py
data/etl/sources/: __init__.py  base_client.py  coingecko_client.py  zchain_client.py
data/etl/transformers/: alert_generator.py
data/sample/: alerts_sample.json  daily_metrics_sample.json
frontend/: .env.production  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.tsx  main.js  main.tsx
frontend/src/components/: AlertsFeed.js  AlertsFeed.tsx  AnimatedBackground.js  AnimatedBackground.tsx  DataFreshnessIndicator.d.ts  DataFreshnessIndicator.js  DataFreshnessIndicator.jsx  ExportButton.js  ExportButton.tsx  InsightPanel.js  InsightPanel.tsx  MetricCard.js  MetricCard.tsx  MomentumCard.d.ts  MomentumCard.js  (+9 more)
(+5 files in other folders)
