[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zcash-pulse-backend"
version = "0.1.0"
description = "FastAPI backend that powers the Zcash Pulse analytics and alerting dashboard."
readme = "README.md"
authors = [{ name = "Zcash Pulse Hackathon Team" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "polars>=1.0",
  "duckdb>=1.0",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "pendulum>=3.0",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "black>=23.12"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
